Fix: Tabs spacing

--- a/styles/spacing.css
+++ b/styles/spacing.css
@@ -105,10 +105,6 @@ ul+h2 {
     margin-top: 16px;
 }
 
-ol+h2 {
-    margin-top: 16px;
-}
-
 .ch-scrollycoding-step-content {
     margin-bottom: 24px;
     padding: 16px;
@@ -163,6 +159,10 @@ h2+h4 {
     margin-top: 16px;
 }
 
+h2+h3 {
+    margin-top: 24px;
+}
+
 pre {
     margin: 0;
     padding-left: 16px;
@@ -205,10 +205,6 @@ pre p {
     margin: 0;
 }
 
-pre {
-    margin-bottom: 32px;
-}
-
 pre+h2 {
     margin-top: 16px;
 }
@@ -222,10 +218,6 @@ article section {
 }
 
 p+h2 {
-    margin-top: 32px;
-}
-
-ol+h2 {
     margin-top: 32px;
 }
 
@@ -340,12 +332,9 @@ article ol {
     padding-left: 24px !important;
 }
 
-article h2+ol {
-    margin-top: 16px !important;
-}
-
+article h2+ol,
 article h2+ul {
-    margin-top: 0;
+    margin-top: 4px !important;
 }
 
 article li ul {
@@ -440,8 +429,8 @@ p:has(img)+h2 {
     margin-top: 16px;
 }
 
-p:has(img)+h3 {
-    margin-top: 0;
+iframe {
+    margin-top: 16px;
 }
 
 li ul {
